--- a/site/package.json
+++ b/site/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "bootstrap": "5.2.3"
+    "bootstrap": "5.2.3",
+    "react-bootstrap" : "2.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
