--- a/site/package.json
+++ b/site/package.json
@@ -24,7 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "pretty": "prettier --check \"src/**/*.{js,ts,jsx,tsx}\"",
-    "fix:pretty": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\""
+    "fix:pretty": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\"",
+    "coverage": "react-scripts test --coverage --watchAll"
   },
   "eslintConfig": {
     "extends": [
