--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-http-jdk-client</artifactId>
+            <version>4.7.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
@@ -102,11 +112,11 @@
             <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-devtools</artifactId>-->
-<!--            <scope>runtime</scope>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-devtools</artifactId>-->
+        <!--            <scope>runtime</scope>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
@@ -235,56 +245,56 @@
                     </execution>
                 </executions>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>com.diffplug.spotless</groupId>-->
-<!--                <artifactId>spotless-maven-plugin</artifactId>-->
-<!--                <version>2.27.1</version>-->
-<!--                <configuration>-->
-<!--                    &lt;!&ndash;                    optional: limit format enforcement to just the files changed by this feature branch &ndash;&gt;-->
-<!--                    &lt;!&ndash;                    <ratchetFrom>origin/main</ratchetFrom>&ndash;&gt;-->
-<!--                    <formats>-->
-<!--                        <format>-->
-<!--                            <includes>-->
-<!--                                <include>*.md</include>-->
-<!--                                <include>.gitignore</include>-->
-<!--                            </includes>-->
-<!--                            <trimTrailingWhitespace/>-->
-<!--                            <endWithNewline/>-->
-<!--                            <indent>-->
-<!--                                <tabs>true</tabs>-->
-<!--                                <spacesPerTab>4</spacesPerTab>-->
-<!--                            </indent>-->
-<!--                        </format>-->
-<!--                        <format>-->
-<!--                            <includes>-->
-<!--                                <include>src/*/java/**/*.java</include>-->
-<!--                            </includes>-->
+            <!--            <plugin>-->
+            <!--                <groupId>com.diffplug.spotless</groupId>-->
+            <!--                <artifactId>spotless-maven-plugin</artifactId>-->
+            <!--                <version>2.27.1</version>-->
+            <!--                <configuration>-->
+            <!--                    &lt;!&ndash;                    optional: limit format enforcement to just the files changed by this feature branch &ndash;&gt;-->
+            <!--                    &lt;!&ndash;                    <ratchetFrom>origin/main</ratchetFrom>&ndash;&gt;-->
+            <!--                    <formats>-->
+            <!--                        <format>-->
+            <!--                            <includes>-->
+            <!--                                <include>*.md</include>-->
+            <!--                                <include>.gitignore</include>-->
+            <!--                            </includes>-->
+            <!--                            <trimTrailingWhitespace/>-->
+            <!--                            <endWithNewline/>-->
+            <!--                            <indent>-->
+            <!--                                <tabs>true</tabs>-->
+            <!--                                <spacesPerTab>4</spacesPerTab>-->
+            <!--                            </indent>-->
+            <!--                        </format>-->
+            <!--                        <format>-->
+            <!--                            <includes>-->
+            <!--                                <include>src/*/java/**/*.java</include>-->
+            <!--                            </includes>-->
 
-<!--                            <prettier>-->
-<!--                                <devDependencies>-->
-<!--                                    <prettier>2.7.1</prettier>-->
-<!--                                    <prettier-plugin-java>1.6.2</prettier-plugin-java>-->
-<!--                                </devDependencies>-->
-<!--                                <config>-->
-<!--                                    <tabWidth>4</tabWidth>-->
-<!--                                    <printWidth>120</printWidth>-->
-<!--                                    <parser>java</parser>-->
-<!--                                </config>-->
-<!--                            </prettier>-->
-<!--                        </format>-->
-<!--                    </formats>-->
-<!--                    <java>-->
-<!--                        <removeUnusedImports />-->
-<!--                    </java>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>check</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <!--                            <prettier>-->
+            <!--                                <devDependencies>-->
+            <!--                                    <prettier>2.7.1</prettier>-->
+            <!--                                    <prettier-plugin-java>1.6.2</prettier-plugin-java>-->
+            <!--                                </devDependencies>-->
+            <!--                                <config>-->
+            <!--                                    <tabWidth>4</tabWidth>-->
+            <!--                                    <printWidth>120</printWidth>-->
+            <!--                                    <parser>java</parser>-->
+            <!--                                </config>-->
+            <!--                            </prettier>-->
+            <!--                        </format>-->
+            <!--                    </formats>-->
+            <!--                    <java>-->
+            <!--                        <removeUnusedImports />-->
+            <!--                    </java>-->
+            <!--                </configuration>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <goals>-->
+            <!--                            <goal>check</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
