--- a/site/package.json
+++ b/site/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "2.7.2",
     "react-bootstrap-range-slider": "^3.0.8",
     "react-dom": "^18.2.0",
+    "react-idle-timer": "^5.6.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
